z-index bug fixed

--- a/src/sass_modules/navbar-mobile.scss
+++ b/src/sass_modules/navbar-mobile.scss
@@ -7,7 +7,7 @@
     }
   }
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   width: 100%;
