--- a/src/sass_modules/navbar.scss
+++ b/src/sass_modules/navbar.scss
@@ -26,6 +26,8 @@
   .menu {
     cursor: pointer;
     display: none;
+    position: relative;
+    z-index: 10;
     color: $color1;
     padding: 5px 0;
     @media screen and (max-width: 500px) {
